[package]
name = "rtool"
version = "0.1.0"
edition = "2021"
description = "一个命令行小工具"
license = "MIT"
authors = ["ztxemail@163.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
clipboard = "0.5.0"
serde = "1.0.114"
serde_json = "1.0.43"

